assets/css/components/change_quiz.css
.form-wrapper {
  max-width: 640px;
  margin-left: auto;
  margin-right: auto;
}

.form-group {
  margin-bottom: 16px;
}
.form-group__heading,
.form-group__body {
  padding: 16px;
  background: var(--color-white);
  border: 1px solid var(--color-silver);
}

.form-group__heading {
  align-items: center;
  position: relative;
  justify-content: space-between;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  border-bottom: 0;
  color: var(--color-primary);
}

.form-group__body {
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.error-message {
  background: #f2c4c4;
  border: 1px solid #790000;
  color: #790000;
  padding: 16px;
  border-radius: 4px;
}

.form-group__body .item {
  position: relative;
  margin-bottom: 16px;
  transition: all 0.3s cubic-bezier(0.55, 0, 0.1, 1);
  display: flex;
  gap: 0.5rem;
}

.form-group__body input[type="text"],
.form-group__body textarea {
  display: block;
  width: 100%;
  padding: 0 8px;
  color: var(--color-dark-gray);
  height: 40px;
  border: 1px solid var(--color-silver);
  border-radius: var(--border-radius);
  transition: box-shadow 0.2s ease;
  font-family: inherit;
  font-size: 13px;
}
.form-group__body input[type="text"].error,
.form-group__body textarea.error {
  border-color: #a94442;
}
.form-group__body input[type="text"]:focus,
.form-group__body textarea:focus {
  outline: 0;
  border-color: var(--color-gray);
  box-shadow: var(--drop-shadow);
}
.form-group__body textarea {
  resize: none;
  height: 60px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.form-group__body input[type="checkbox"] {
  width: 3%;
}

.remove-btn {
  border-style: none;
  position: absolute;
  display: inline-block;
  color: var(--color-gray);
  background: 0 0;
  border: 1px solid transparent;
  opacity: 0;
  transition: opacity 0.2s ease;
  padding: 0 16px;
  top: 8px;
  right: 1.2rem;
  cursor: pointer;
  font-size: 16px;
}
.form-group__heading .remove-btn {
  top: 17px;
  padding: 0;
}

.item:hover .remove-btn {
  opacity: 1;
}
.form-group__heading:hover .remove-btn {
  opacity: 1;
}

